suggestion card added

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+card mb-5 mb-xl-0@charset "UTF-8";
 /*!
 * Start Bootstrap - Modern Business v5.0.0 (https://startbootstrap.com/template-overviews/modern-business)
 * Copyright 2013-2021 Start Bootstrap
